# TAED2_Amazon_Review_Classifiers

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  data.dvc  dvc.yaml  emissions.csv  params.yaml  pyproject.toml  pytest.ini  requirements.txt
.dvc/: config
data/: .gitignore  datasetcard.yaml  external.dvc  full.dvc  raw.dvc  split.dvc  test.txt.dvc  train.txt.dvc
data/raw/: split.py
docs/: mkdocs.yml
docs/docs/: index.md
docs/emissions/: prediction_emissions_100k.csv
notebooks/: 1.0-mhs-original-hugging-face-notebook.ipynb  1_0_mhs_original_hugging_face_notebook.ipynb
reports/: datasetcard.md  modelcard.md
reports/coverage/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_config_py.html  z_145eef247bfb46b6_utilities_py.html  z_4855056ef6d55655___init___py.html  z_4855056ef6d55655_check_data_py.html  z_4855056ef6d55655_embedding_matrix_generation_py.html  z_4855056ef6d55655_evaluate_py.html  z_4855056ef6d55655_predict_emissions_py.html  z_4855056ef6d55655_predict_py.html  (+5 more)
resources/: gen_predict_data.py
src/: __init__.py  config.py  utilities.py
taed2_amazon_review_classifiers/: __init__.py  config.py  dataset.py  features.py  plots.py
tests/: api_test.py  embedding_matrix_generation_test.py  evaluate_test.py  model_negation_test.py  model_rand_word_test.py  model_sarcasm_test.py  params.yaml  predict_test.py  schemas_test.py  test_model.py  tokenization_and_split_test.py  train_test.py  train_test_split_test.py  utilities_test.py
(+14 files in other folders)
