[project]
name = "taed2_amazon_review_classifiers"
version = "0.0.1"
description = "Sentiment Classification for Amazon reviews"
authors = [
  { name = "Amazon_Review_Classifiers" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["taed2_amazon_review_classifiers"]
force_sort_within_sections = true

[tool.poetry]
name = "taed2-amazon-review-classifiers"
version = "0.1.0"
description = ""
authors = ["Benji33 <benjiblank95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
numpy = "^2.1.1"
scikit-learn = "^1.5.2"
dvc = "^3.55.2"
mlflow = "^2.16.2"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pylint = "^3.2.7"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
